--- a/transit_api/package.json
+++ b/transit_api/package.json
@@ -15,9 +15,12 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "gtfs-realtime-bindings": "^1.1.1",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
+    "typeorm": "^0.3.16",
     "zod": "^3.21.4"
   },
   "devDependencies": {
